src/objects/FinancialAccountHistory__c.object
<CustomObject>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Approval/Loan committee</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Doc Prep</fullName>
                </value>
                <value>
                    <fullName>Doc Review</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Escheat</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Charged off</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Setup Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State for mailing address.</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatementFrequency__c</fullName>
        <label>Statement Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Charge-off</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Paid out</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetLimit__c</fullName>
        <description>The limit on items or value that the service will process.</description>
        <label>Target Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxID__c</fullName>
        <label>Tax ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Nonqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeHorizon__c</fullName>
        <label>Time Horizon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Medium Term</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalCreditLimit__c</fullName>
        <label>Total Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family home</fullName>
                </value>
                <value>
                    <fullName>Town home</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Owned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_of_contribution_bring_tax_benefit__c</fullName>
        <label>What % of contribution bring tax benefit</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Withdrawl_Start_Date__c</fullName>
        <label>Withdrawl Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>scenario_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>FinancialAccountHistories</relationshipLabel>
        <relationshipName>FinancialAccountHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FinancialAccountHistory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FinancialAccountHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FinancialAccountHistories</pluralLabel>
    <recordTypes>
        <fullName>AutoLoan</fullName>
        <active>true</active>
        <description>Represents a type of loan for financing a purchase of a motor vehicle.</description>
        <label>Auto Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>BankingAccount</fullName>
        <active>true</active>
        <description>Bank accounts such as savings, checking, and credit</description>
        <label>Bank Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>CheckingAccount</fullName>
        <active>true</active>
        <description>Represents a deposit account for withdrawals and deposits</description>
        <label>Checking Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Common_Record_Rype</fullName>
        <active>false</active>
        <label>Common Record Rype</label>
    </recordTypes>
    <recordTypes>
        <fullName>CreditCard</fullName>
        <active>true</active>
        <description>Represents a type of payment card issued with a line of credit</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinancialHistoryRecordType</fullName>
        <active>true</active>
        <label>FinancialHistoryRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <description>General financial accounts</description>
        <label>General Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>HELOC</fullName>
        <active>true</active>
        <description>Represents a line of credit secured by equity in real property.</description>
        <label>HELOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>InsurancePolicy</fullName>
        <active>true</active>
        <description>Insurance policies</description>
        <label>Insurance Policy</label>
    </recordTypes>
    <recordTypes>
        <fullName>InvestmentAccount</fullName>
        <active>true</active>
        <description>Investment accounts such as brokerage accounts</description>
        <label>Investment Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>LoanAccount</fullName>
        <active>true</active>
        <description>Represents a type of account for financing a purchase.</description>
        <label>Loan Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mortgage</fullName>
        <active>true</active>
        <description>Represents a type of loan for financing a purchase of real property.</description>
        <label>Mortgage</label>
    </recordTypes>
    <recordTypes>
        <fullName>SavingsAccount</fullName>
        <active>true</active>
        <description>Represents an interest-bearing deposit account</description>
        <label>Savings Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scenario_Credit_Cards_Record_Type</fullName>
        <active>true</active>
        <label>Scenario Credit Cards Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scenario_Loans_Record_Type</fullName>
        <active>true</active>
        <label>Scenario Loans Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scenario_Savings_Record_Type</fullName>
        <active>true</active>
        <label>Scenario Savings Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>TreasuryService</fullName>
        <active>true</active>
        <description>Accounts that provide transaction or investment services for chief financial officers or treasurers.</description>
        <label>Treasury Service</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>